fixed UI issues. Most the contents are aligned well

--- a/style/helper.scss
+++ b/style/helper.scss
@@ -7,5 +7,11 @@
 @mixin transition-property($args...){
 	-webkit-transition-property: $args;
 	-moz-transition-property: $args
+}
 
+@mixin welcome-container{
+	width: $grid-width;
+	height: 40px;
+	margin: 10px auto;
+	// border: 1px solid blue;
 }
